Bug 296450: Make the hashtable holding attribute nodes work properly on all platforms. r=beaufour sr=peterv a=caillon